<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
  android:id="@+id/root" 
  android:orientation="vertical" 
  android:layout_width="fill_parent" 
  android:layout_height="wrap_content"> 
  <EditText 
    android:id="@+id/txtId" 
    android:focusable="true" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    android:layout_weight="1"/> 
  <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/lblResults"/>
  <LinearLayout 
    android:orientation="horizontal" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"> 
    <EditText 
      android:id="@+id/txtName" 
      android:focusable="true"
      android:layout_width="fill_parent" 
      android:layout_height="fill_parent"
      android:layout_weight="0.3"/>
    <EditText 
      android:id="@+id/txtGrade" 
      android:focusable="true" 
      android:layout_width="fill_parent" 
      android:layout_height="fill_parent" 
      android:layout_weight="1"/> 
  </LinearLayout> 
  <LinearLayout 
    android:orientation="horizontal" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"> 
    <Button 
      android:id="@+id/get" 
      android:text="@string/get" 
      android:layout_width="fill_parent" 
      android:layout_height="fill_parent" 
      android:layout_weight="1"/>
    <Button 
      android:id="@+id/add" 
      android:text="@string/add" 
      android:layout_width="fill_parent" 
      android:layout_height="fill_parent" 
      android:layout_weight="1"/>
    <Button 
      android:id="@+id/del" 
      android:text="@string/del" 
      android:layout_width="fill_parent" 
      android:layout_height="fill_parent" 
      android:layout_weight="1"/>
    <Button 
      android:id="@+id/upd" 
      android:text="@string/upd" 
      android:layout_width="fill_parent" 
      android:layout_height="fill_parent" 
      android:layout_weight="1"/>
    <Button 
      android:id="@+id/cln" 
      android:text="@string/cln" 
      android:layout_width="fill_parent" 
      android:layout_height="fill_parent" 
      android:layout_weight="1"/>
  </LinearLayout> 
</LinearLayout>
